# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./budgets";
 export * from "./goals";
 export * from "./challenges";
 export * from "./achievements";
+export * from "./settings";
